--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -279,7 +279,6 @@ a.active {
     height: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
@@ -316,4 +315,95 @@ a.active {
     text-align: center;
 }
 
-/*  */
+/* History */
+
+.history {
+    display: flex;
+    padding: 0;
+    background-color: antiquewhite;
+    border-bottom: 5px solid gray;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.history-form {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 5px solid gray;
+
+    form {
+        width: 20%;
+        max-width: 200px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        input {
+            text-align: center;
+        }
+    }
+
+    .loader {
+        width: 50px;
+    }
+}
+
+.history-wrapper {
+    align-self: center;
+    padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.history-items {
+    width: 400px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.history-item-info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 15px;
+    border-bottom: 3px solid gray;
+}
+
+.history-item-list {
+    align-items: center;
+    justify-content: center;
+    overflow-x: scroll;
+    white-space: nowrap;
+    padding: 15px;
+    display: flex;
+    gap: 15px;
+}
+
+.list-item {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.list-item-image {
+    width: 150px;
+    height: 100px;
+    border-radius: 20px;
+
+    > img {
+        width: 100%;
+        border-radius: 20px;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.list-item-info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
